--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
 
         </a>
         <div class="social-icons">
-          <a href="https://github.com/yourgithub" target="_blank"><i class="fab fa-github"></i></a>
-          <a href="https://linkedin.com/in/yourlinkedin" target="_blank"><i class="fab fa-linkedin"></i></a>
+          <a href="https://github.com/VishwasGurao" target="_blank"><i class="fab fa-github"></i></a>
+          <a href="https://www.linkedin.com/in/vishwas-gurav-04a270263?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"><i class="fab fa-linkedin"></i></a>
         </div>
       </div>
     </div>
