--- a/index.html
+++ b/index.html
@@ -108,21 +108,21 @@
           <img src="/ecommerce.jpeg" alt="Online Shopping Website">
           <h3>Online Shopping Website</h3>
           <p>Responsive e-commerce platform with cart, filters & payment gateway using HTML, CSS, JS.</p>
-          <a href="https://e-commercewebsitbyvishwas.netlify.app/" target="_blank" class="btn">View Project</a>
+          <a href="https://electronics-nine-olive.vercel.app/" target="_blank" class="btn">View Project</a>
         </div>
   
         <div class="project-card">
           <img src="/Portfolio.jpg" alt="Portfolio Website">
           <h3>Portfolio Website</h3>
           <p>Personal portfolio with smooth navigation, dark/light mode toggle and animations.</p>
-          <a href="https://yourprojectlink2.com" target="_blank" class="btn">View Project</a>
+          <a href="https://my-portfolio-murex-three-16.vercel.app/" target="_blank" class="btn">View Project</a>
         </div>
   
         <div class="project-card">
           <img src="/Task Manager.jpg" alt="Task Manager App">
           <h3>Task Manager App</h3>
           <p>To-do list app with add/delete/mark features and local storage functionality using JS.</p>
-          <a href="https://todoappbyvishwas.netlify.app/" target="_blank" class="btn">View Project</a>
+          <a href="https://task-managerbyvishwas.vercel.app/" target="_blank" class="btn">View Project</a>
         </div>
       </div>
     </div>
